# cxIntegration

./: .gitignore  README.md  configure.ac
cxparser/: Makefile.am
cxparser/nbproject/: configurations.xml  project.xml
cxparser/src/: Makefile.am  applicationconfig.cpp  applicationconfig.h  cxdata.h  cxmailbodycreator.cpp  cxmailbodycreator.h  cxxmlparser.cpp  cxxmlparser.h  main.cpp
cxparser/templates/: mail.template  severity.template  vulnerability.template
deploy/: cxparser  integration.sh  mail.template  report.xml
scripts/: integration.sh
src/: Makefile.am  applicationconfig.cpp
